--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<%- include('./partials/header') %>
+
+<p>Welcome to <%= title %></p>
+
+<button>Login</button>
+
+<div class="faq">
+  <h3>What is Butter</h3>
+  <p>We all find it hard to remember to do our physio exercises at home. Butter is here to help. In this app you will be able to log your exercierses, and keep track of how often you need to get them done. Our aim is to get your joints feeling as smooth as butter!  </p>
+
+</div>
+<%- include('./partials/footer') %>
