OAuth complete, additional models added, skelloton profile page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,10 @@
 <p>Welcome to <%= title %></p>
 
 <button>Login</button>
+<!-- Ref this to OAuth -->
 
 <div class="faq">
-  <h3>What is Butter</h3>
+  <h3>What is Butter?</h3>
   <p>We all find it hard to remember to do our physio exercises at home. Butter is here to help. In this app you will be able to log your exercierses, and keep track of how often you need to get them done. Our aim is to get your joints feeling as smooth as butter!  </p>
 
 </div>
