--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,18 @@
 </head>
     <body>    
         <nav> 
-
+            <% if (user) { %>
+            <a href="/profile/<%= user.id %>">Profile</a>
+            ||
+            <a href="">Exercise Plan</a>
+            ||
+            <a href="">Community</a>
+            ||
+            <a href="/logout">Log Out</a>
+            <% } else { %>
+            ||
+            <a href="/auth/google" class="login">LOG IN&nbsp;</a>
+            <% } %>
         </nav>
         <main>
             <h1><%= title %></h1>
