--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 
 <div class="faq">
   <h3>What is Butter?</h3>
-  <p>We all find it hard to remember to do our physio exercises at home. Butter is here to help. In this app you will be able to log your exercierses, and keep track of how often you need to get them done. Our aim is to get your joints feeling as smooth as butter!  </p>
+  <p>We all find it hard to remember to do our physio exercises at home. Butter is here to help. In this app you will be able to log your exercierses, and keep track of how often you need to get them done. Our aim is help you reach your recovery goals faster, and get your joints feeling as smooth as butter!  </p>
 
 </div>
 <%- include('./partials/footer') %>
