--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,11 +10,12 @@
     <body>    
         <nav> 
             <% if (user) { %>
-            <a href="/profile/<%= user.id %>">Profile</a>
             ||
             <a href="">Exercise Plan</a>
             ||
             <a href="">Community</a>
+            ||
+            <a href="/profiles">Profile</a>
             ||
             <a href="/logout">Log Out</a>
             <% } else { %>
