--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -4,40 +4,38 @@
     <h2>Hi <%= user.name %> !</h2>
 </section>
 
+
+<a href="/profiles/new">click this </a>
+
 <section class="progress">
-    <% if (profile.length) { %>
+    <% if (user.injuryProfile.length) { %>
     <h3>Rehab Progression</h3>
     <table>
         <thead>
             <tr>
             <th>Goal</th>
             <th>Injury</th>
-            <th>Training Sessions Per Week</th>
+            <th>Sessions Per Week</th>
+            <th></th>
             <th></th>
             </tr>
         </thead>
         <tbody>
-        <% profile.forEach((p) => { %>
-            <tr><%= p.goal %></tr>
-            <tr><%= p.injury %></tr>
-            <tr><%= p.trainingamount%></tr>
-            <tr><button>E</button></tr>
-            <tr><button>X</button></tr>
-
+        <% user.injuryProfile.forEach((p) => { %>
+            <tr>
+                <td><%= p.goal %></td>
+                <td><%= p.injury %></td>
+                <td><%= p.trainingamount %></td>
+                <td><button>E</button></td>
+                <td><form 
+                    action="/profiles/<%= p._id %>?_method=DELETE" 
+                    method="POST">
+                    <button type="submit">X</button>
+                    </form>
+                </td>
+            </tr>
         </tbody>
-        <% }) } else { %>
-            <h4>Tell Us Your Recovery Goal</h4>
-            <p>Goal setting is a fundamental part of treatment. They provide you with direction and inspiration through the tought times.</p>
-            <form action="/profiles" method="POST">
-                <label>Whats Your Goal</label>
-                <input type="text" name="goal"><br>
-                <label for="">Whats your Injury</label>
-                <input type="text" name="injury"><br>
-                <label for="">How many Sessions per week</label>
-                <input type="number" name="trainingamount"><br>
-                <button type="submit">Add Your Goal</button>
-            </form>
-    <% }%>
+    <% }) }%>
     
 </section>
 
@@ -63,68 +61,36 @@
                 <div>See full details here</div>
             </tbody>
         </table>
-    <% }) } else { %>
-        <h4>Add Exercises to Your Bundle !</h4>
-        <form id="add-exercise-form" method="POST"
-        action="">
-        <label>Exercise Name:</label>
-        <input type="text"><br>
-        <label>Description:</label>
-        <textarea name="content"></textarea><br>
-        <label>Number of Sets:</label>
-        <input type="number"><br>
-        </select>
-        <label for="">Number of Reps:</label>
-        <input type="number"><br>
-        <label>Video Link:</label>
-        <input type="url" name="url" id="url" 
-        placeholder="https://example.com"
-        pattern="https://.*"
-        ><br>
-        <button type="submit">Add Exercise </button>
-    <% }%>
+    <% }) }%>
     
 </section>
 
 <section class="journal">
     <h3>Journal</h3>
     <% if (journal.length) { %>
-    <table>
-        <thead>
-            <tr>
-                <th>Training Session Number</th>
-                <th>Date</th>
-                <th>Session Review:</th>
-                <th>Session Rating:</th>
-                <th></th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            <% journal.forEach((j)=> { %>
-            <tr>
-                <td>Training session number Maybe this is log ? </td>
-                <td><%= j.createdAt.toLocaleDateString() %></td>
-                <td><%= j.content %></td>
-                <td><%= j.rating %></td>
-                <td><button>E</button></td>
-                <td><button>X</button></td>
-            </tr>
-        </tbody>
-        <% }) } else { %>
-        <h4>Enter Your first Session Entry</h4>
-        <p> Journaling has been proven to reduce stress, improve mind body connection, as well as countless mental health benefits. Reflect on your sessions, either at home or at the physio, write down what went well or what could be improved upon. Give your session a score out of 10 and track your progress ! Give it a go below: </p>
-
-        <form action="">
-            <label>Session Number</label>
-            <input type="Number"><br>
-            <label for="">Session Review</label>
-            <textarea name="content"></textarea><br>
-            <label for="">Session Rating</label>
-            <input type="Number" name="" id="rating">
-        </form>
-    </table>
-    <% } %>
+        <table>
+            <thead>
+                <tr>
+                    <th>Training Session Number</th>
+                    <th>Date</th>
+                    <th>Session Review:</th>
+                    <th>Session Rating:</th>
+                    <th></th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <% journal.forEach((j)=> { %>
+                <tr>
+                    <td>Training session number Maybe this is log ? </td>
+                    <td><%= j.createdAt.toLocaleDateString() %></td>
+                    <td><%= j.content %></td>
+                    <td><%= j.rating %></td>
+                    <td><button>E</button></td>
+                    <td><button>X</button></td>
+                </tr>
+            </tbody>
+    <% }) } %>
 </section>
 
 <%- include('../partials/footer') %>
