exercise routes/view/controllers added + journal routes/ skeloton controllers/views added

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,9 +11,9 @@
         <nav> 
             <% if (user) { %>
             ||
-            <a href="">Exercise Plan</a>
+            <a href="/exercises">Exercise Plan</a>
             ||
-            <a href="">Community</a>
+            <a href="">Butter Bunch</a>
             ||
             <a href="/profiles">Profile</a>
             ||
