--- a/views/profiles/new.ejs
+++ b/views/profiles/new.ejs
@@ -13,31 +13,12 @@
                 <label for="">Whats your Injury</label>
                 <input type="text" name="injury"><br>
                 <label for="">How many Sessions per week</label>
-                <input type="number" name="trainingamount"><br>
+                <input type="number" name="trainingamount" min="1" max="10"><br>
                 <button type="submit">Add Your Goal</button>
             </form>
 </section>
 
-<section class="plan">
-        <h4>Add Exercises to Your Bundle !</h4>
-        <form id="add-exercise-form" method="POST"
-        action="">
-        <label>Exercise Name:</label>
-        <input type="text"><br>
-        <label>Description:</label>
-        <textarea name="content"></textarea><br>
-        <label>Number of Sets:</label>
-        <input type="number"><br>
-        </select>
-        <label for="">Number of Reps:</label>
-        <input type="number"><br>
-        <label>Video Link:</label>
-        <input type="url" name="url" id="url" 
-        placeholder="https://example.com"
-        pattern="https://.*"
-        ><br>
-        <button type="submit">Add Exercise </button>  
-</section>
+
 
 <section class="journal">
         <h3>Enter Your first Session Entry</h3>
