--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -26,7 +26,7 @@
                 <td><%= p.goal %></td>
                 <td><%= p.injury %></td>
                 <td><%= p.trainingamount %></td>
-                <td><button>E</button></td>
+                <td><a href="/profiles/edit">Edit</a></td>
                 <td><form 
                     action="/profiles/<%= p._id %>?_method=DELETE" 
                     method="POST">
@@ -65,32 +65,5 @@
     
 </section>
 
-<section class="journal">
-    <h3>Journal</h3>
-    <% if (journal.length) { %>
-        <table>
-            <thead>
-                <tr>
-                    <th>Training Session Number</th>
-                    <th>Date</th>
-                    <th>Session Review:</th>
-                    <th>Session Rating:</th>
-                    <th></th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <% journal.forEach((j)=> { %>
-                <tr>
-                    <td>Training session number Maybe this is log ? </td>
-                    <td><%= j.createdAt.toLocaleDateString() %></td>
-                    <td><%= j.content %></td>
-                    <td><%= j.rating %></td>
-                    <td><button>E</button></td>
-                    <td><button>X</button></td>
-                </tr>
-            </tbody>
-    <% }) } %>
-</section>
 
 <%- include('../partials/footer') %>
