--- a/views/exercises/index.ejs
+++ b/views/exercises/index.ejs
@@ -12,17 +12,20 @@
         <th>Sets</th>
         <th>Reps</th>
         <th></th>
+        <th></th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
-      <% Exercise.forEach(function(e) { %>
+      <% exercises.forEach(function(e) { %>
         <tr>
           <td><%= e.exName %></td>
           <td><%= e.description %></td>
           <td><%= e.sets %></td>
           <td><%= e.reps %></td>
           <td><%= e.video %></td>
-          <td><a href="/exercise/<%= e._id %>">DETAILS</a></td>
+          <td><a href="/exercise/<%= e._id %>">DETAILS</a></td> 
+          <td><button type= ></button></td>
         </tr>
         <% }); %>
       </tbody>
