--- a/views/profiles/new.ejs
+++ b/views/profiles/new.ejs
@@ -1,22 +1,26 @@
 <%- include('../partials/header') %>
 
-<section class="userInfo">
+<div class="userInfo">
     <h2>Hi <%= user.name %> ready to enter some infomation ?</h2>
-</section>
+</div>
 
-<section class="progress">
-            <h4>Tell Us Your Recovery Goal</h4>
-            <p>Goal setting is a fundamental part of treatment. They provide you with direction and inspiration through the tought times.</p>
-            <form action="/profiles" method="POST">
-                <label>Whats Your Goal</label>
-                <input type="text" name="goal"><br>
-                <label for="">Whats your Injury</label>
-                <input type="text" name="injury"><br>
-                <label for="">How many Sessions per week</label>
-                <input type="number" name="trainingamount" min="1" max="10"><br>
-                <button type="submit">Add Your Goal</button>
-            </form>
-</section>
+<div>
+    <h4>Tell Us Your Recovery Goal</h4>
+    <p>Goal setting is a fundamental part of treatment. They provide you with direction and inspiration through the tought times.</p>
+
+    <form action="/profiles" method="POST">
+        <label>Whats Your Goal</label>
+        <input type="text" name="goal"><br>
+
+        <label for="">Whats your Injury</label>
+        <input type="text" name="injury"><br>
+
+        <label for="">How many Sessions per week</label>
+        <input type="number" name="trainingamount" min="1" max="10"><br>
+
+        <button type="submit">Add Your Goal</button>
+    </form>
+</div>
 
 
 
