--- a/views/exercises/new.ejs
+++ b/views/exercises/new.ejs
@@ -3,28 +3,34 @@
 
 <section class="plan">
     <h4>Add An Exercise To Your Bundle!</h4>
-    <form id="add-exercise-form" method="POST"action="">
+    <form  action="/exercises" method="POST">
+
     <label>Exercise Name:</label>
-    <input type="text"><br>
+    <input type="text" name="exName"><br>
 
     <label>Description:</label>
-    <textarea name="content"></textarea><br>
+    <textarea name="description"></textarea><br>
 
     <label>Number of Sets:</label>
-    <input type="number" min="1" max="10"><br>
+    <input type="number" name="sets" min="1" max="10"><br>
 
     <label for="">Number of Reps:</label>
-    <input type="number" min="1" max="10"><br>
+    <input type="number" name="reps" min="1" max="15"><br>
 
     <label>Video Link:</label>
     <input 
-        type="url" name="url" id="url" 
+        type="url" name="video" id="url" 
         placeholder="https://example.com"
         pattern="https://.*"
     ><br>
 
-    <button type="submit">Add Exercise</button>  
+    <button type="submit">Add Exercise</button>
+    </form> 
 </section>
 
 
 <%- include('../partials/footer') %>
+
+
+
+
