--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-</head>
-    <body>    
-        <nav> 
-            <% if (user) { %>
-            ||
-            <a href="/exercises">Exercise Plan</a>
-            ||
-            <a href="">Butter Bunch</a>
-            ||
-            <a href="/profiles">Profile</a>
-            ||
-            <a href="/logout">Log Out</a>
-            <% } else { %>
-            ||
-            <a href="/auth/google" class="login">LOG IN&nbsp;</a>
-            <% } %>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title><%= title %></title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+        <link rel='stylesheet' href='/stylesheets/style.css' />
+    </head>
+    
+        <nav class="navbar navbar-expand-md bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">BUTTER</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <% if (user) { %>
+                    <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="/exercises">Exercise Plan</a>
+                    <a class="nav-link" href="#">Butter Bunch</a>
+                    <a class="nav-link" href="/profiles" >Profile</a>
+                    <a class="nav-link" href="/logout">Log Out</a>
+                <% } else { %>
+                    <a class="nav-link" href="/auth/google">Log In</a>
+                <% } %>
+                </div>
+                </div>
+            </div>
         </nav>
-        <main>
+        <body> 
+            <div class="container">
             
 
         
