--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
 <%- include('./partials/header') %>
 
-<p>Welcome to <%= title %></p>
 
-<div class="faq">
-  <h3 >What is Butter?</h3>
-  <p class="lead text-center">We all find it hard to remember to do our physio exercises at home. Butter is here to help. In this app you will be able to log your exercierses, and keep track of how often you need to get them done. Our aim is help you reach your recovery goals faster, and get your joints feeling as smooth as butter!  </p>
-
+<div class="position-relative"></div>
+  <div class="position-absolute top-50 start-50 translate-middle"></div>
+    <br><br><h1 class= "text-center">What is Butter?</h1>
+    <br><br><p class= "text-center"> We all find it hard to remember to do our physio exercises at home. Butter is here to help. In this app you will be able to log your exercierses, and keep track of how often you need to get them done. Our aim is help you reach your recovery goals faster, and get your joints feeling as smooth as butter!  </p>
+  </div>
 </div>
 <%- include('./partials/footer') %>
