--- a/views/exercises/edit.ejs
+++ b/views/exercises/edit.ejs
@@ -1,56 +1,35 @@
 <%- include('../partials/header') %>
 
-    <form action="/exercises/<%= exercise._id %>?_method=PUT" method="POST">
-        <label>Exercise Name:</label>
-        <input type="text" name="exName"><br>
-    
-        <label>Description:</label>
-        <textarea name="description"></textarea><br>
-    
-        <label>Number of Sets:</label>
-        <input type="number" name="sets" min="1" max="10"><br>
-    
-        <label for="">Number of Reps:</label>
-        <input type="number" name="reps" min="1" max="15"><br>
-    
-        <label>Video Link:</label>
-        <input 
-            type="url" name="video" id="url" 
-            placeholder="https://example.com"
-            pattern="https://.*"
-        ><br>
-    
-        <button type="submit">Add Exercise</button>
-    </form>
- 
+<div>
+    <br><h4 class="text-bg-warning p-3">Edit Exercise</h4><br><br>
+</div>
 
-        
-<div class="form-floating mb-3">
+<div class="mb-3">
     <form action="/exercises/<%= exercise._id %>?_method=PUT" method="POST">
-        
-        <input type="text" name="exName" class="form-control" id="floatingInput" placeholder= <%= exercise.exName%> ><br>
-        
-        <div class="form-floating"></div>
-            <label>Description:</label>
-            <textarea name="description" class="form-control" id="floatingInput" placeholder= <%= exercise.description %> </textarea> <br>
-        </div>
-        <label>Number of Sets:</label>
-        <input type="number" name="sets" min="1" max="10"><br>
+        <label class="form-label">Exercise Name:</label>
+        <input  class="form-control"type="text" name="exName"><br>
     
-        <label for="">Number of Reps:</label>
-        <input type="number" name="reps" min="1" max="15"><br>
+        <label class="form-label">Description:</label>
+        <textarea  class="form-control" name="description"></textarea><br>
     
-        <label>Video Link:</label>
+        <label class="form-label">Number of Sets:</label>
+        <input  class="form-control" type="number" name="sets" min="1" max="10"><br>
+    
+        <label class="form-label">Number of Reps:</label>
+        <input  class="form-control" type="number" name="reps" min="1" max="15"><br>
+    
+        <label class="form-label" >Video Link:</label>
         <input 
+            class="form-control"
             type="url" name="video" id="url" 
             placeholder="https://example.com"
             pattern="https://.*"
         ><br>
-    
-        <button type="submit">Edit Exercise</button>
+
+        <button class="btn btn-warning" type="submit">Submit Edit </button>
     </form>
-        
-        
- </div>
+</div>
+<a class="btn btn-warning" href="/exercises">Back</a>
+
 
 <%- include('../partials/footer') %>
