--- a/views/exercises/index.ejs
+++ b/views/exercises/index.ejs
@@ -1,67 +1,53 @@
 <%- include('../partials/header') %>
 
-<h2>Butter Bundle</h2>
+<h2>Exercise Bundle</h2>
 
-<h1>INDEX PAGE</h1>
-
-<!-- <table id="list">
-    <thead>
-      <tr>
-        <th>Exercise Name</th><br>
-        <th>Description</th><br>
-        <th>Sets</th>
-        <th>Reps</th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
+<div class="container text-center" >
+  <div class="row row-cols-auto">
+    <% if (exercises.length) { %>
       <% exercises.forEach(function(e) { %>
-        <tr>
-          <td><%= e.exName %></td>
-          <td><%= e.description %></td>
-          <td><%= e.sets %></td>
-          <td><%= e.reps %></td>
-          <td><%= e.video %></td>
-          <td><a href="/exercises/<%= e._id %>">DETAILS</a></td> 
-          <td><form 
-            action="/exercises/<%= e._id %>/?_method=DELETE" 
-            method="POST">
-            <button type="submit">X</button>
-        </form></td>
-        </tr>
-        <% }); %>
-      </tbody>
-    </table> -->
+        <div class="col">
+          <!-- User found youtube Links contain 'watch?=' which causes errors -->
+          <!-- they need to be replaced with "embed/" -->
+          <% e.video = e.video.toString().replace('watch?v=', 'embed/') %>
+          <div class="row align-items-start">
+            <div class="col">
+              <div class="card text-bg-warning mb-3" style="width: 18.5rem;">
+                <iframe width="300" height="215" src="<%= e.video %>" frameborder="0"  allowfullscreen></iframe>
+                <div class="card-body">
+                  <h4 class="card-title"><%= e.exName %></h4>
+                  <p class="card-text"><%= e.description %></p>
+                </div>
 
+                <ul class="list-group list-group-flush -bg-warning ">
+                  <li class="list-group-item">Sets: <%= e.sets %></li>
+                  <li class="list-group-item">Reps: <%= e.reps %></li>
+                </ul>
 
-   
-    <div class="card" style="width: 18rem;">
-      <% exercises.forEach(function(e) { %>
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title"><%= e.exName %></h5>
-        <p class="card-text"><%= e.description %></p>
-      </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">Sets: <%= e.sets %></li>
-        <li class="list-group-item">Reps: <%= e.reps %></li>
-
-      </ul>
-      <div class="card-body">
-        <a class="card-link" href="/exercises/<%= e._id %>">DETAILS</a>
-        <form 
-            action="/exercises/<%= e._id %>/?_method=DELETE" 
-            method="POST">
-            <button type="submit">X</button>
-        </form>
-      </div>
+                <div class="card-body">
+                  <a class="btn btn-dark" href="/exercises/<%= e._id %>">DETAILS</a>
+                  <form 
+                      action="/exercises/<%= e._id %>/?_method=DELETE" 
+                      method="POST"><br>
+                      <button class="btn btn-dark" type="submit">X</button>
+                  </form>
+                  <a class="btn btn-dark" href="/exercises/<%= e._id %>">SHARE</a>
+                </div>
+                
+              </div>
+            </div>
+          </div>
+        </div>
       <% }); %>
-    </div>
-
-
+    <% } else { %>
+      <h5>Your Goal section is empty</h5>
+    <% } %>
+  </div>
+  <br>
+  <div>
+    <a class="btn btn-warning" href="/exercises/new">Add New Exercise</a>
+  </div>
+</div>
 
 
 <%- include('../partials/footer') %>
