--- a/views/exercises/new.ejs
+++ b/views/exercises/new.ejs
@@ -1,32 +1,35 @@
 <%- include('../partials/header') %>
 
 
-<section class="plan">
-    <h4>Add An Exercise To Your Bundle!</h4>
+<h4 class="text-bg-warning p-3" >Add An Exercise To Your Bundle!</h4>
+
+
+<div>
     <form  action="/exercises" method="POST">
 
-    <label>Exercise Name:</label>
-    <input type="text" name="exName"><br>
+    <label class="form-label">Exercise Name:</label>
+    <input class="form-control" type="text" name="exName"><br>
 
-    <label>Description:</label>
-    <textarea name="description"></textarea><br>
+    <label class="form-label">Description:</label>
+    <textarea class="form-control" name="description"></textarea><br>
 
-    <label>Number of Sets:</label>
-    <input type="number" name="sets" min="1" max="10"><br>
+    <label class="form-label">Number of Sets:</label>
+    <input class="form-control" type="number" name="sets" min="1" max="10"><br>
 
-    <label for="">Number of Reps:</label>
-    <input type="number" name="reps" min="1" max="15"><br>
+    <label class="form-label">Number of Reps:</label>
+    <input class="form-control" type="number" name="reps" min="1" max="15"><br>
 
-    <label>Video Link:</label>
+    <label class="form-label">Video Link:</label>
     <input 
         type="url" name="video" id="url" 
         placeholder="https://example.com"
         pattern="https://.*"
+        class="form-control"
     ><br>
 
-    <button type="submit">Add Exercise</button>
+    <button class="btn btn-warning" type="submit">Add Exercise</button>
     </form> 
-</section>
+</div>
 
 
 <%- include('../partials/footer') %>
