--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,29 +9,29 @@
         <link rel='stylesheet' href='/stylesheets/style.css' />
     </head>
     
-        <nav class="navbar navbar-expand-md bg-body-tertiary">
+        <nav class="navbar navbar-expand-md bg-warning ">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">BUTTER</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class=" text-end collapse navbar-collapse " id="navbarNavAltMarkup">
                 <% if (user) { %>
                     <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="/exercises">Exercise Plan</a>
-                    <a class="nav-link" href="#">Butter Bunch</a>
-                    <a class="nav-link" href="/profiles" >Profile</a>
-                    <a class="nav-link" href="/logout">Log Out</a>
+                        <a class="nav-link active" aria-current="page" href="/exercises">Exercise Plan</a>
+                        <a class="nav-link active" href="#">Butter Bunch</a>
+                        <a class="nav-link active" href="/profiles" >Profile</a>
+                        <a class="nav-link active" href="/logout">Log Out</a>
                 <% } else { %>
-                    <a class="nav-link" href="/auth/google">Log In</a>
+                        <a class="nav-link text-end" href="/auth/google">Log In</a>
                 <% } %>
                 </div>
                 </div>
             </div>
         </nav>
-        <body> 
-            <div class="container">
+        <body class="bg-body-tertiary" style="display:flex;flex-direction:column"> 
+            <div class="container" style="flex-grow:1">
             
 
         
