--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,7 +20,7 @@
                 <% if (user) { %>
                     <div class="navbar-nav">
                         <a class="nav-link active" aria-current="page" href="/exercises">Exercise Plan</a>
-                        <a class="nav-link active" href="#">Butter Bunch</a>
+                        <a class="nav-link active" href="/groupReps">Butter Bunch</a>
                         <a class="nav-link active" href="/profiles" >Profile</a>
                         <a class="nav-link active" href="/logout">Log Out</a>
                 <% } else { %>
