--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,8 +3,8 @@
     
     </div>
     <br><br><footer>
-        <div class="bg-warning text-center ">Best start on any recover journy is to follow the R.I.C.E Protocol </div>
-        <div class="bg-warning text-center opacity-23"> Smooth Like Butter</div>
+        <div class="bg-warning text-center fst-italic">Best start on any recover journy is to follow the R.I.C.E Protocol </div>
+        <div class="bg-warning text-center opacity-23 fst-italic" id="smooth"> Smooth Like Butter</div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
